--- a/index.html
+++ b/index.html
@@ -3,29 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css" type="text/css">
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1>Ipari Szabadidő Központ</h1>
         <p>Blog</p>
         <a href="#">Kedvelés</a>
         <a href="#">Követés</a>
     </header>
-    <main>
-        <article>
+    <main class="main">
+        <article class="article">
             <h2>Remek cikk a suliújságról</h2>
             <img src="híd.jpg" alt="híd">
             <p>A mi újságunkat a Mi diákjaink írják, a Mi diákjaink szerkesztik, és a Mi diákjaink olvassák. Azért készítjük, hogy legyen egy olyan portál, melyet úgy alakítunk, Mi diákok, ahogy szeretnénk, és szabadon, foglalkozhassunk a minket érdeklő, és érintő témákkal.</p>
             <a href="#">Olvass tovább</a>
         </article>
-        <article>
+        <article class="article">
             <h2>Vers- és novellaíró pályázat</h2>
             <img src="ir.jpg" alt="ír">
             <p>A magyar munkaközösség a 2020/2021. tanévben is meghirdeti a vers- és novellaíró pályázatát az iskola tanulói számára.</p>
             <a href="#">Olvass tovább</a>
         </article>
-        <article>
+        <article class="article">
             <h2>Neked ajánljuk</h2>
             <img src="lepcso.jpg" alt="lépcső">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id sodales dolor. Praesent venenatis lorem vitae lacus
