--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
     <main class="main">
         <article class="article">
             <h2>Remek cikk a suliújságról</h2>
-            <img src="híd.jpg" alt="híd">
+            <img src="híd.jpg" alt="híd" class="picture">
             <p>A mi újságunkat a Mi diákjaink írják, a Mi diákjaink szerkesztik, és a Mi diákjaink olvassák. Azért készítjük, hogy legyen egy olyan portál, melyet úgy alakítunk, Mi diákok, ahogy szeretnénk, és szabadon, foglalkozhassunk a minket érdeklő, és érintő témákkal.</p>
             <a href="#">Olvass tovább</a>
         </article>
         <article class="article">
             <h2>Vers- és novellaíró pályázat</h2>
-            <img src="ir.jpg" alt="ír">
+            <img src="ir.jpg" alt="ír" class="picture">
             <p>A magyar munkaközösség a 2020/2021. tanévben is meghirdeti a vers- és novellaíró pályázatát az iskola tanulói számára.</p>
             <a href="#">Olvass tovább</a>
         </article>
         <article class="article">
             <h2>Neked ajánljuk</h2>
-            <img src="lepcso.jpg" alt="lépcső">
+            <img src="lepcso.jpg" alt="lépcső" class="picture">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id sodales dolor. Praesent venenatis lorem vitae lacus
             scelerisque aliquet. Donec posuere, risus ut faucibus facilisis, felis velit mollis risus, at gravida sapien arcu
             tincidunt metus.</p>
