--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header class="header">
         <h1>Ipari Szabadidő Központ</h1>
         <p>Blog</p>
-        <a href="#">Kedvelés</a>
-        <a href="#">Követés</a>
+        <a href="#" class="button">Kedvelés</a>
+        <a href="#" class="button">Követés</a>
     </header>
     <main class="main">
         <article class="article">
@@ -36,7 +36,7 @@
             tincidunt metus.</p>
             <a href="#">Olvass tovább</a>
         </article>
-        <a href="#">További cikkek...</a>
+        <a href="#" class="load">További cikkek...</a>
     </main>
 </body>
 </html>
